<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_title">My Nanodegree Apps!</string>
    <string name="spotify">SPOTIFY STREAMER</string>
    <string name="scores">SCORES APP</string>
    <string name="library">LIBRARY APP</string>
    <string name="bigger">BUILD IT BIGGER</string>
    <string name="reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
</resources>
